2005-01-05  Not Zed  <NotZed@Ximian.com>

	* em-menu.c (em_menu_target_new_widget): add a semi-dummy target
	for widget target.

	* mail-component.c (handleuri_got_folder): handle the "reply"
	parameter, if set.

	* em-composer-utils.c (em_utils_reply_to_message): only ref the
	source if supplied.
	(reply_to_message): only unref the source if supplied.

2004-12-28  Mengjie Yu  <meng-jie.yu@sun.com>

	* em-folder-tree.c: (em_folder_tree_new_with_model):
	add atk name for the treeview.

2004-12-22  Not Zed  <NotZed@Ximian.com>

	* em-account-editor.c (emae_needs_auth): moved to after
	emae_authtype_changed to fix warning.

2004-12-17  Not Zed  <NotZed@Ximian.com>

	* em-format-html-display.c (efhd_attachment_popup): 

	* message-list.c (ml_tree_drag_data_received): 

	* em-folder-view.c (emfv_popup, emfv_format_popup_event): 

	* em-folder-tree.c (tree_drag_data_received): api changes.
	(emft_popup): 

	* em-popup.c (emp_standard_menu_factory) 
	(emp_standard_menu_factory): api changes.

2004-12-21  Not Zed  <NotZed@Ximian.com>

	* em-account-editor.c (emae_needs_auth): if we're turned on, then
	record the current authtype setting on the widgets, if we're
	turned off, clear the authmech setting.
	(emae_setup_service): setup the needs auth after the authtype, and
	get setting from url->authmech.
	(emae_service_provider_changed): only clear the url->authmech if
	we don't have the current one in our list.

2004-12-20  Takeshi AIHANA <aihana@gnome.gr.jp>

	* default/Makefile.am: Added 'ja' and 'nl' to install.

2004-12-14  Rodney Dawes  <dobey@novell.com>

	* mail-account-gui.c: Remove this from CVS
	
	* mail-config.glade: Use em_account_editor_folder_selector_button_new
	instead of mail_account_gui_folder_selector_button_new

2004-12-14  JP Rosevear  <jpr@novell.com>

	Fixes #68759
	
	* mail-account-gui.c (service_check_supported): fix typo in
	routine name

2004-12-08  Hans Petter Jansson  <hpj@novell.com>
